// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridPosition renders 0 1`] = `
Array [
  .c0 {
  grid-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridPosition renders function 1`] = `
Array [
  .c0 {
  grid-position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridPosition renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridPosition renders negative number 1`] = `
Array [
  .c0 {
  grid-position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridPosition renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  grid-position: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-position: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-position: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-position: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-position: July;
}

@media screen and (min-width:November) {
  .c0 {
    grid-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-position: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-position: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-position: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  grid-position: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-position: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-position: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-position: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-position: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-position: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-position: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-position: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-position: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridPosition renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-position: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-position: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-position: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-position: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-position: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-position: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-position: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-position: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-position: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridPosition renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  grid-position: July;
}

@media May {
  .c0 {
    grid-position: August;
  }
}

@media April {
  .c0 {
    grid-position: September;
  }
}

@media January {
  .c0 {
    grid-position: November;
  }
}

@media April {
  .c0 {
    grid-position: August;
  }
}

@media June {
  .c0 {
    grid-position: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-position: July;
}

@media May {
  .c0 {
    grid-position: August;
  }
}

@media April {
  .c0 {
    grid-position: September;
  }
}

@media January {
  .c0 {
    grid-position: November;
  }
}

@media April {
  .c0 {
    grid-position: August;
  }
}

@media June {
  .c0 {
    grid-position: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  grid-position: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-position: November;
  }
}

@media April {
  .c0 {
    grid-position: January;
  }
}

@media January {
  .c0 {
    grid-position: December;
  }
}

@media April {
  .c0 {
    grid-position: April;
  }
}

@media June {
  .c0 {
    grid-position: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-position: November;
  }
}

@media April {
  .c0 {
    grid-position: January;
  }
}

@media January {
  .c0 {
    grid-position: December;
  }
}

@media April {
  .c0 {
    grid-position: April;
  }
}

@media June {
  .c0 {
    grid-position: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridPosition renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    grid-position: July;
  }
}

@media April {
  .c0 {
    grid-position: August;
  }
}

@media January {
  .c0 {
    grid-position: September;
  }
}

@media April {
  .c0 {
    grid-position: November;
  }
}

@media June {
  .c0 {
    grid-position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-position: July;
  }
}

@media April {
  .c0 {
    grid-position: August;
  }
}

@media January {
  .c0 {
    grid-position: September;
  }
}

@media April {
  .c0 {
    grid-position: November;
  }
}

@media June {
  .c0 {
    grid-position: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-position: January;
  }
}

@media April {
  .c0 {
    grid-position: December;
  }
}

@media January {
  .c0 {
    grid-position: April;
  }
}

@media April {
  .c0 {
    grid-position: May;
  }
}

@media June {
  .c0 {
    grid-position: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-position: January;
  }
}

@media April {
  .c0 {
    grid-position: December;
  }
}

@media January {
  .c0 {
    grid-position: April;
  }
}

@media April {
  .c0 {
    grid-position: May;
  }
}

@media June {
  .c0 {
    grid-position: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridPosition renders postitive number 1`] = `
Array [
  .c0 {
  grid-position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridPosition renders string 1`] = `
Array [
  .c0 {
  grid-position: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridPosition renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`gridPosition renders valid theme path 1`] = `
Array [
  .c0 {
  grid-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-position: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
